// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/post_list_row should render channel intro message 1`] = `<Connect(ChannelIntroMessage) />`;

exports[`components/post_view/post_list_row should render combined post 1`] = `
<Connect(Connect(injectIntl(Post)))
  combinedId="user-activity-1234-5678"
  previousPostId="abcd"
  shouldHighlight={false}
/>
`;

exports[`components/post_view/post_list_row should render date line 1`] = `
<Connect(DateSeparator)
  date={1553106600000}
  key="1553106600000"
/>
`;

exports[`components/post_view/post_list_row should render manual load messages trigger 1`] = `
<button
  className="more-messages-text theme style--none color--link"
  onClick={[MockFunction]}
>
  <FormattedMessage
    defaultMessage="Load More Messages"
    id="posts_view.loadMore"
    values={Object {}}
  />
</button>
`;

exports[`components/post_view/post_list_row should render more messages loading indicator 1`] = `
<div
  className="loading-screen"
>
  <div
    className="loading__content"
  >
    <div
      className="round round-1"
    />
    <div
      className="round round-2"
    />
    <div
      className="round round-3"
    />
  </div>
</div>
`;

exports[`components/post_view/post_list_row should render new messages line 1`] = `
<NewMessageSeparator
  separatorId="start-of-new-messages"
/>
`;

exports[`components/post_view/post_list_row should render post 1`] = `
<Connect(injectIntl(Post))
  postId="1234"
  previousPostId="abcd"
  shouldHighlight={false}
/>
`;
